<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Product description -->
    <string name="product_description_title">Описание</string>

    <!-- Product detail -->
    <string name="product_description">Описание</string>
    <string name="product_more_details">Подробее</string>
    <string name="product_review_title">Отзывы (%d)</string>
    <string name="product_review_view_all">Посмотреть все</string>
    <string name="product_shopping_cart">Добавить в корзину</string>
    <string name="product_category_title">Категория</string>
    <string name="product_rating">Оценить</string>
    <string name="product_repeat_rating">Оценить снова</string>

    <!-- Product dialog -->
    <string name="product_dialog_make_review">Оценить</string>
    <string name="product_dialog_review_title">Оцените товар</string>
    <string name="product_dialog_write_your_review_here">Напишите отзыв</string>
    <string name="product_dialog_error">Поставьте оценку</string>
</resources>