<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">

    <include
        android:id="@+id/layout_shimmer"
        layout="@layout/product_shimmer_fragment"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".presentation.book.main_page.BookFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/space_7.5x" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="21dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/space_5x" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_arrow"
                app:flow_horizontalBias="0.0"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/gl_top"
                app:tint="@color/color_accent"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toStartOf="@id/product_image"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/gl_top" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                app:layout_constraintDimensionRatio="H,5:7"
                app:layout_constraintEnd_toStartOf="@id/view_2"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintStart_toEndOf="@id/view_1"
                app:layout_constraintTop_toBottomOf="@id/gl_top"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toBottomOf="@id/gl_top" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name"
                style="@style/basic_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/space_5x"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/price"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/product_image"
                tools:text="iphone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price"
                style="@style/basic_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/space_5x"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/price_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/cl_buy"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10x"
                android:layout_marginTop="@dimen/space_3x"
                app:layout_constraintEnd_toStartOf="@id/cl_rating"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/price">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_shopping_cart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_shopping_cart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/basic_color"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_1x"
                    android:text="@string/product_shopping_cart"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_shopping_cart" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_3x"
                android:layout_marginEnd="@dimen/space_10x"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/cl_buy"
                app:layout_constraintTop_toBottomOf="@id/price">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_rating"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_star"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/basic_color"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_1x"
                    android:text="@string/product_rating"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_rating" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_main_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="cl_rating,cl_buy" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4x"
                android:background="@drawable/product_bottom_sheet_background"
                android:paddingStart="@dimen/space_5x"
                android:paddingEnd="@dimen/space_5x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_main_view">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_category_title"
                    style="@style/basic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:text="@string/product_category_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4x"
                    android:background="@drawable/category_filter_background"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_category_title"
                    tools:text="Категория" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description_title"
                    style="@style/basic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:text="@string/product_description"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description_more"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:text="@string/product_more_details"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description"
                    style="@style/basic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description_title"
                    tools:text="описание описание описание" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_review_title"
                    style="@style/basic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:text="@string/product_review_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_review_more"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:text="@string/product_review_view_all"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/space_4x"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_review_title"
                    tools:itemCount="3"
                    tools:listitem="@layout/view_holder_review" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/block"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>